# choose-your-own-adventure

./: .gitignore  .nojekyll  README.md  index.html
.github/: labeler.yml
.github/workflows/: apisec-scan.yml  clojure.yml  codeql.yml  deploy-pages.yml  greetings.yml  label.yml  manual.yml  pylint.yml
choose-your-adventure/: README.md  pyproject.toml  requirements.txt
choose-your-adventure/src/adventure/: __init__.py  __main__.py  choices.py  cli.py  engine.py  scenes.py
choose-your-adventure/src/adventure/data/stories/: starter_story.yaml
choose-your-adventure/tests/: __init__.py  test_engine.py  test_scenes.py
docs/: .nojekyll  index.html  story.json  sw.js
